--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Dynamic_MS</string>
     <color name="green">#007f00</color>
+    <color name="light_green">#d0f8d3</color>
+
 </resources>
